# ic-multisig-voting

./: .gitignore  Cargo.toml  README.md
crates/ic-multisig-demo/: Cargo.toml  README.md  dfx.json
crates/ic-multisig-demo/src/: lib.rs
crates/ic-multisig-voting/: Cargo.toml  README.md
crates/ic-multisig-voting/src/: lib.rs  storage.rs
